k3s/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring  # adjust if needed
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-basic-auth-middleware@kubernetescrd
spec:
  rules:
  - host: prometheus.carter2099.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
